fix: layout problems

--- a/app/app.css
+++ b/app/app.css
@@ -71,11 +71,12 @@ html {
     scroll-behavior: smooth;
     overflow-x: hidden;
     font-size: 1rem;
+    interpolate-size: allow-keywords;
 }
 
 body {
     --s: 129px; /* control the size*/
-    --c1: #1b1b2c;
+    --c1: rgb(33, 27, 44);
     --c2: #001219;
 
     --_g: #0000 52%, var(--c1) 54% 57%, #0000 59%;
@@ -98,12 +99,6 @@ a.active {
 
 a.pending {
     @apply animate-pulse;
-}
-img {
-    max-width: 100%;
-    min-height: 300px;
-    height: 100%;
-    max-height: 70vh;
 }
 
 @layer components {
@@ -182,11 +177,11 @@ img {
     overflow: hidden;
 }
 
-img.zoom {
+img.zoom-normal {
     /* the coordinate of the zoom */
     --x: 50%;
     --y: 50%;
-
+    --zoom: 1;
     transform: scale(var(--zoom));
     transform-origin: var(--x) var(--y);
     clip-path: inset(
@@ -197,8 +192,82 @@ img.zoom {
     );
     cursor: crosshair;
 }
-img.zoom:hover {
-    --zoom: 2; /* control the zoom level */
+img.zoom-hover {
+    --x: 50%;
+    --y: 50%;
+    --zoom: 2;
+    transform: scale(var(--zoom));
+    transform-origin: var(--x) var(--y);
+    clip-path: inset(
+        calc((1 - 1 / var(--zoom)) * (var(--y)))
+            calc((1 - 1 / var(--zoom)) * (100% - var(--x)))
+            calc((1 - 1 / var(--zoom)) * (100% - var(--y)))
+            calc((1 - 1 / var(--zoom)) * (var(--x)))
+    );
+    cursor: crosshair;
 }
 
+img.zoom-end {
+    --zoom: 1; /* control the zoom level */
+    /* the coordinate of the zoom */
+    --x: 50%;
+    --y: 50%;
+    transform: scale(var(--zoom));
+    transform-origin: var(--x) var(--y);
+    clip-path: inset(
+        calc((1 - 1 / var(--zoom)) * (var(--y)))
+            calc((1 - 1 / var(--zoom)) * (100% - var(--x)))
+            calc((1 - 1 / var(--zoom)) * (100% - var(--y)))
+            calc((1 - 1 / var(--zoom)) * (var(--x)))
+    );
+    cursor: crosshair;
+}
+img.zoom-start {
+    --zoom: 2;
+    --x: 10%;
+    --y: 10%;
+    transform: scale(var(--zoom));
+    transform-origin: var(--x) var(--y);
+    clip-path: inset(
+        calc((1 - 1 / var(--zoom)) * (var(--y)))
+            calc((1 - 1 / var(--zoom)) * (100% - var(--x)))
+            calc((1 - 1 / var(--zoom)) * (100% - var(--y)))
+            calc((1 - 1 / var(--zoom)) * (var(--x)))
+    );
+    cursor: pointer;
+}
+div.frame {
+    white-space: nowrap;
+    width: 8rem;
+    height: 12rem;
+    overflow: clip;
+    transition: width 0.35s ease;
+
+    &:hover,
+    &:focus-visible {
+        width: max-content;
+        height: max-content;
+    }
+}
+img.avatar {
+    --s: 300px; /* control the size */
+
+    width: var(--s);
+    aspect-ratio: 1;
+    object-fit: cover;
+    object-position: top;
+    padding: calc(var(--s) / 4) calc(var(--s) / 8) 0;
+    box-sizing: border-box;
+    background: conic-gradient(
+        from 135deg at 50% 15%,
+        #e0dee1,
+        #28a6b5 25%,
+        #0000 0
+    );
+    clip-path: polygon(-50% 0, 150% 0, 50% 100%);
+    transition: 0.5s;
+}
+img.avatar:hover {
+    padding: 0;
+}
 @tailwind utilities;
